# OpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/shaders/: fragment.glsl  geometry.glsl  stencil.glsl  vertex.glsl
resources/shaders/skybox/: fragment.glsl  vertex.glsl
resources/shaders/stencil/: fragment.glsl
resources/textures/: ascensionLogo.dds  sampleTexture.dds
src/: GLContext.cpp  main.cpp
src/Camera/: Camera.cpp  Camera.h
src/GLContext/: GLContext.cpp  GLContext.h
src/GLContext/GLInputHandler/: GLInputHandler.cpp  GLInputHandler.h
src/GLContext/GLScene/: GLScene.cpp  GLScene.h  Grid.cpp
src/GLMainLoop/: GLMainLoop.cpp  GLMainLoop.h
src/GLModel/: GLModel.cpp  GLModel.h
src/GLModel/Material/: Material.cpp  Material.h
src/GLModel/Mesh/: Mesh.cpp  Mesh.h
src/GLObject/: GLObject.cpp  GLObject.h
src/GLRenderer/: GLRenderer.cpp  GLRenderer.h
src/GLScene/: GLScene.h
src/GLWindow/: GLWindow.cpp  GLWindow.h
src/GLWindow/GLScene/: GLScene.cpp  GLScene.h
src/Program/: Program.cpp  Program.h
src/Shader/: Shader.cpp  Shader.h
src/Texture/: Texture.cpp  Texture.h
src/UniBlock/: UniBlock.cpp  UniBlock.h
src/elements/: Cube.cpp  Cube.h  ElementBase.h  Square.cpp  Square.h
src/elements/Cube/: Cube.cpp  Cube.h
src/elements/ElementBase/: ElementBase.cpp  ElementBase.h
src/elements/Mesh/: Mesh.cpp  Mesh.h
src/elements/Skybox/: Skybox.h
src/elements/Square/: Square.h
src/light/: light.cpp  light.h
src/meshes/Cube/: Cube.cpp  Cube.h
src/meshes/Grid/: Grid.cpp  Grid.h
src/objects/ElementBase/: ElementBase.cpp  ElementBase.h
src/objects/MeshOld/: MeshOld.cpp  MeshOld.h
src/objects/Skybox/: Skybox.cpp
src/objects/Square/: Square.cpp  Square.h
src/shaders/: fragment.glsl  vertex.glsl
src/util/: Vector.cpp  Vector.h  Vertex.cpp  loaders.cpp  mat4.h  uniforms.h  util.cpp  util.h  vec4.h
